# drug-email-qa

./: .gitignore  CODE_WALKTHROUGH.md  Dockerfile  PRD.md  README.md  analyze_traces.py  api.py  app.py  config.py  generator.py  generator_system.md  grader.py  graph.py  live-loop-demo.html  llm_client.py  pipeline.py  pipeline_langgraph.py  pyproject.toml  regulatory.py  requirements.txt  schema.py  soft_review.py  trace_logger.py  traces.jsonl
agents/: __init__.py  export_utils.py  generator.py  image_analyzer.py  reviewers.py
assets/: style.css
core/: config.py  exceptions.py  llm_client.py  logger.py  regulatory.py  schema.py  trace_logger.py  utils.py
docs/: ANTIGRAVITY_PROMPT.md  architecture.md
files/: CODE_WALKTHROUGH.md  analyze_traces.py  api.py  app.py  brand_config.py  live-loop-demo.html  requirements.txt  trace_logger.py  traces.jsonl
files/tests/: test_grader.py  test_pipeline.py
knowledge/: brand_guidelines.md  compliance_rules.md  context.py  drug_info.md  email_guidelines.md  image_metadata.json  rules.py
pipeline/: generator.py  grader.py  pipeline.py  pipeline_langgraph.py  soft_review.py
prompts/: generator_system.md
scripts/: analyze_traces.py  api.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_export_utils.py  test_generator.py  test_grader.py  test_llm_client.py  test_pipeline.py  test_regulatory.py  test_reviewers.py  test_rules.py  test_server.py  test_soft_review.py  test_verification_loop.py
ui/: app.py  dashboard.py  history.py  index.html  server.py  sidebar.py
